Add print fallbacks for videos
Also uploaded these to youtube to be the poster image for each video.

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -52,6 +52,7 @@ figure_list:
     src: Mrvriy6TaEU
     media_type: youtube
     aspect_ratio: standard
+    fallback: fig-1-5-video-bek.jpg
     caption: >
       Woman creating a drawing on a 1990 replica of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Museum Tinguely, Basel.
     credit: >
@@ -176,6 +177,7 @@ figure_list:
   - id: "3.1"
     src: 7vQkoFfU9gA
     media_type: youtube
+    fallback: fig-3-1-video-gilberg.jpg
     caption: >
       Chris Burden’s *Metropolis II* in action.
     credit: >
@@ -296,6 +298,7 @@ figure_list:
   - id: "4.9"
     src: h4PxDv_CFS4
     media_type: youtube
+    fallback: fig-4-9-video-snow.jpg
     caption: >
       Yale University Art Gallery’s video documentation of Wilfred’s *Lumia Suite, Opus 158*. Museum of Modern Art, New York, Department of Painting and Sculpture, Museum Collection Files.
     credit: >
@@ -304,6 +307,7 @@ figure_list:
   - id: "5.1"
     src: gj42ZITk7EM
     media_type: youtube
+    fallback: fig-5-1-video-lawson.jpg
     caption: >
       The central crown of *Umbrella*, 1971, by Wen-Ying Tsai (1928–2013), in action at Tate Modern’s Tank Gallery, June 16, 2016–February 5, 2017.
     credit: >
@@ -340,6 +344,7 @@ figure_list:
   - id: "6.1"
     src: h5mMCqOLACo
     media_type: youtube
+    fallback: fig-6-1-video-phillips.jpg
     caption: >
       Max Dean’s *As Yet Untitled*, 1992–95, on view in *Drone: The Automated Image* at VOX, Centre de l’Image Contemporaine, September 7–October 19, 2013, during Le Mois de la Photo à Montréal 2013. Installation from the collection of the Art Gallery of Ontario.
     credit: >
@@ -418,6 +423,7 @@ figure_list:
   - id: "7.6"
     src: OdKBY-9Xeos
     media_type: youtube
+    fallback: fig-7-6-video-stephenson.jpg
     caption: >
       Sound produced by the operation of Takis’s *Musical-M.013*, 2000. The Menil Collection, Houston, gift of the artist.
     credit: >
@@ -448,6 +454,7 @@ figure_list:
   - id: "7.10"
     src: j86w750dsNU
     media_type: youtube
+    fallback: fig-7-10-video-stephenson.jpg
     caption: >
       Operation of Takis’s *Ballet Magnetique*, 1961, after conservation treatment. The Menil Collection, Houston.
     credit: >
@@ -470,6 +477,7 @@ figure_list:
   - id: "8.2"
     src: j5rhSkSZc3w
     media_type: youtube
+    fallback: fig-8-2-video-pavic.jpg
     caption: >
       Aleksandar Srnec adjusting his luminokinetic artwork at his exhibition in 1969. Museum of Contemporary Art, Zagreb.
     credit: >
@@ -513,6 +521,7 @@ figure_list:
   - id: "8.6"
     src: bXS4nfmu5Tw
     media_type: youtube
+    fallback: fig-8-6-video-pavic.jpg
     caption: >
       Analogue projection of Aleksandar Srnec’s *Luminoplastic 1*, 1965–67.
     credit: >
@@ -570,6 +579,7 @@ figure_list:
   - id: "8.11"
     src: EY3foRIJIFE
     media_type: youtube
+    fallback: fig-8-11-video-pavic.jpg
     caption: >
       Comparison of the analogue and digital projections.
     credit: >
@@ -578,6 +588,7 @@ figure_list:
   - id: "9.1"
     src: zNr9YISTQfw
     media_type: youtube
+    fallback: fig-9-1-video-gillies.jpg
     caption: >
       Gregorio Vardanega’s *Espaces chromatiques carrées en spirale (Chromatic Spaces Turning in a Spiral)*, 1968, Plexiglas, light bulbs, and motor; after treatment. The Museum of Fine Arts, Houston, museum purchase funded by the Latin Maecenas, 2010.173.
     credit: >
@@ -593,6 +604,7 @@ figure_list:
   - id: "9.3"
     src: PVJR2aAmdU4
     media_type: youtube
+    fallback: fig-9-3-video-gillies.jpg
     caption: >
       Gregorio Vardanega’s *Couleurs sonores (Sound Colors)*, 1963–79, metal, light bulbs, and electric motor; after treatment. The Museum of Fine Arts, Houston, gift of the estate of the artist and Sicardi Gallery, 2013.665.A-.G.
     credit: >
@@ -608,6 +620,7 @@ figure_list:
   - id: "9.5"
     src: E1HBHKpd46U
     media_type: youtube
+    fallback: fig-9-5-video-gillies.jpg
     caption: >
       Horacio García Rossi’s *Structure à lumiere instable no. 29 (Unstable Light Structure No. 29)*, 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
@@ -637,6 +650,7 @@ figure_list:
   - id: "9.9"
     src: wRws0HvLPB8
     media_type: youtube
+    fallback: fig-9-9-video-gillies.jpg
     caption: >
       Abraham Palatnik’s *Aparelho cinecromático (Chromo-kinetic set)*, 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
@@ -960,6 +974,7 @@ figure_list:
   - id: "15.2"
     src: fgqht8Ui8dw
     media_type: youtube
+    fallback: fig-15-2-video-brobbel.jpg
     caption: >
       Len Lye’s *A Flip and Two Twisters (Trilogy)*, 1977.
     credit: >
@@ -975,6 +990,7 @@ figure_list:
   - id: "15.4"
     src: zuY2-yNpJ-8
     media_type: youtube
+    fallback: fig-15-4-video-brobbel.jpg
     caption: >
       Len Lye’s *Loop*, ca. 1964, after its 2016 restoration. The Art Institute of Chicago, Barbara Neff Smith and Solomon Byron Smith Purchase Fund.
     credit: >
@@ -983,6 +999,7 @@ figure_list:
   - id: "15.5"
     src: t_Or2bTzcbg
     media_type: youtube
+    fallback: fig-15-5-video-brobbel.jpg
     caption: >
       Len Lye’s *Five Fountains and a Firebush*, 2007. Govett-Brewster Art Gallery.
     credit: >
