--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,9 @@ theme: "quire-base-theme"
 footnoteReturnLinkContents: "↩"
 metaDataFormat: "yaml"
 
+blackfriday:
+  fractions: false
+
 # These values can be accessed in templates via .Site.Params
 params:
   searchEnabled: true
