Small fixes to Foreward, Preface, and Opening Remarks

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -10,7 +10,7 @@ figure_list:
   - id: "I.2"
     src: fig-i-2-ratti.jpg
     caption: >
-      Giovanni Anceschi, *Strutturazione tricroma*, 1964, four cube-shaped elements in wood and metal, inbuilt screen, back projection with additive color synthesis, and four 220V electromechanical motors. Museo del Novecento (long-term loan of the artist, Milan).
+      Giovanni Anceschi, *Struttura tricroma*, 1964, four cube-shaped elements in wood and metal, inbuilt screen, back projection with additive color synthesis, and four 220V electromechanical motors. Museo del Novecento (long-term loan of the artist, Milan).
     credit: >
       © Giovanni Anceschi. Museo del Novecento, Milan © Comune di Milano. All rights reserved.
 
