Small fixes to Part I: Keynotes

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -102,7 +102,7 @@ figure_list:
     caption: >
       Leo Villareal’s *Flowers 8*, 2005.
     credit: >
-      Courtesy of Donald R. Mullen, Jr., with permission from the artist.
+      Courtesy of Donald R. Mullen Jr., with permission from the artist.
 
   - id: "1.12"
     src: Kpwfx8Zn0S4
@@ -111,7 +111,7 @@ figure_list:
     caption: >
       Leo Villareal’s *Flowers 8*, 2005.
     credit: >
-      Courtesy of Donald R. Mullen, Jr., with permission from the artist.
+      Courtesy of Donald R. Mullen Jr., with permission from the artist.
 
   - id: "2.1"
     src: fig-2-1-caianiello.jpg
@@ -121,14 +121,14 @@ figure_list:
   - id: "2.2"
     src: fig-2-2-caianiello.jpg
     caption: >
-      Heinz Mack, Otto Piene, Günther Uecker’s *Lichtraum (Homage à Fontana)*, 1964. Museum Kunstpalast, Düsseldorf, 2005.
+      Heinz Mack, Otto Piene, Günther Uecker’s *Lichtraum (Hommage à Fontana)*, 1964. Museum Kunstpalast, Düsseldorf, 2005.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn.
 
   - id: "2.3"
     src: fig-2-3-caianiello.jpg
     caption: >
-      Günther Uecker’s *Lichtscheibe* on view in the Fridericianum, Documenta 3, Kassel, 1964.
+      Günther Uecker’s *Lichtscheibe* on view in the Fridericianum, documenta 3, Kassel, 1964.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: © documenta Archive / Horst Munzig.
 
@@ -142,7 +142,7 @@ figure_list:
   - id: "2.5"
     src: fig-2-5-caianiello.jpg
     caption: >
-      Heinz Mack’s *Zwischen Himmel und Erde*, 1966, in Zero in Bonn, Städtische Kunstsammlungen Bonn, 1966.
+      Heinz Mack’s *Zwischen Himmel und Erde*, 1966, in *Zero in Bonn*, Städtische Kunstsammlungen Bonn, 1966.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: Courtesy of ZERO Foundation, Hans Schafgans Archive.
 
@@ -170,7 +170,7 @@ figure_list:
   - id: "2.8"
     src: fig-2-8-caianiello.jpg
     caption: >
-      Otto Piene’s Lichtballett *“Hommage à New York,”* 1966, in *Zero in Bonn*, Städtische Kunstsammlungen Bonn, 1966.
+      Otto Piene’s *Lichtballett “Hommage à New York,”* 1966, in *Zero in Bonn*, Städtische Kunstsammlungen Bonn, 1966.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: Courtesy of Otto Piene Archive, ZERO Foundation, Düsseldorf.
 
