Small Fixes to Part 2: Case Studies

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -85,7 +85,7 @@ entries:
     reference_for: "case-studies/4-snow"
 
   - short: Wilfred 1964
-    full: "Wilfred, Thomas. 1964. “*Lumia Suite, Op. 158* by Thomas Wilfred 1964. Lumia Composition in 3 Movements: A technical manual on the projection instrument rendering the composition, as installed at the Museum of Modern Art in New York City during June and July, 1964.” Unpublished. Museum Collection Files, Thomas Wilfred, Lumia Suite, Opus 158. Department of Painting and Sculpture, Museum of Modern Art, New York."
+    full: "Wilfred, Thomas. 1964. “*Lumia Suite, Op. 158* by Thomas Wilfred 1964. Lumia Composition in 3 Movements: A technical manual on the projection instrument rendering the composition, as installed at the Museum of Modern Art in New York City during June and July, 1964.” Unpublished. Museum Collection Files, Thomas Wilfred, *Lumia Suite, Opus 158*. Department of Painting and Sculpture, Museum of Modern Art, New York."
     reference_for: "case-studies/4-snow"
 
   - short: Alley 1981
