--- a/data/figures.yml
+++ b/data/figures.yml
@@ -591,14 +591,14 @@ figure_list:
     media_type: youtube
     fallback: fig-9-1-video-gillies.jpg
     caption: >
-      Gregorio Vardanega’s *Espaces chromatiques carrées en spirale (Chromatic Spaces Turning in a Spiral)*, 1968, Plexiglas, light bulbs, and motor; after treatment. The Museum of Fine Arts, Houston, museum purchase funded by the Latin Maecenas, 2010.173.
+      Gregorio Vardanega’s *Espaces chromatiques carrées en spirale* (Chromatic Spaces Turning in a Spiral), 1968, Plexiglas, light bulbs, and motor; after treatment. The Museum of Fine Arts, Houston, museum purchase funded by the Latin Maecenas, 2010.173.
     credit: >
       © Estate of Gregorio Vardanega. Courtesy Sicardi Gallery Houston. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.2"
     src: fig-9-2-gillies.jpg
     caption: >
-      Interior detail of *Gregorio Vardanega’s Espaces chromatiques carrées en spirale (Chromatic Spaces Turning in a Spiral)*, 1968, Plexiglas, light bulbs, and motor. The Museum of Fine Arts, Houston, museum purchase funded by the Latin Maecenas, 2010.173.
+      Interior detail of *Gregorio Vardanega’s Espaces chromatiques carrées en spirale* (Chromatic Spaces Turning in a Spiral), 1968, Plexiglas, light bulbs, and motor. The Museum of Fine Arts, Houston, museum purchase funded by the Latin Maecenas, 2010.173.
     credit: >
       © Estate of Gregorio Vardanega. Courtesy Sicardi Gallery Houston. Photo: Jane Gillies © The Museum of Fine Arts, Houston.
 
@@ -607,14 +607,14 @@ figure_list:
     media_type: youtube
     fallback: fig-9-3-video-gillies.jpg
     caption: >
-      Gregorio Vardanega’s *Couleurs sonores (Sound Colors)*, 1963–79, metal, light bulbs, and electric motor; after treatment. The Museum of Fine Arts, Houston, gift of the estate of the artist and Sicardi Gallery, 2013.665.A-.G.
+      Gregorio Vardanega’s *Couleurs sonores* (Sound Colors), 1963–79, metal, light bulbs, and electric motor; after treatment. The Museum of Fine Arts, Houston, gift of the estate of the artist and Sicardi Gallery, 2013.665.A-.G.
     credit: >
       © Estate of Gregorio Vardanega. Courtesy Sicardi Gallery Houston. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.4"
     src: fig-9-4-gillies.jpg
     caption: >
-      Martha Boto’s *Déplacements optiques (Optical Displacements)*, 1967–69, painted wood, light, aluminum, and motor; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1617.
+      Martha Boto’s *Déplacements optiques* (Optical Displacements), 1967–69, painted wood, light, aluminum, and motor; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1617.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
@@ -623,28 +623,28 @@ figure_list:
     media_type: youtube
     fallback: fig-9-5-video-gillies.jpg
     caption: >
-      Horacio García Rossi’s *Structure à lumiere instable no. 29 (Unstable Light Structure No. 29)*, 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      Horacio García Rossi’s *Structure à lumiere instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horacio García Rossi. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.6"
     src: fig-9-6-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumiere instable no. 29 (Unstable Light Structure No. 29)*, 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horatio García Rossi. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.7"
     src: fig-9-7-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumiere instable no. 29 (Unstable Light Structure No. 29)*, 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horatio García Rossi. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.8"
     src: fig-9-8-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumiere instable no. 29 (Unstable Light Structure No. 29)*, 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horatio García Rossi. Photo: Jane Gillies © The Museum of Fine Arts, Houston.
 
@@ -653,28 +653,28 @@ figure_list:
     media_type: youtube
     fallback: fig-9-9-video-gillies.jpg
     caption: >
-      Abraham Palatnik’s *Aparelho cinecromático (Chromo-kinetic set)*, 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
+      Abraham Palatnik’s *Aparelho cinecromático* (Chromo-kinetic set), 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
       © Abraham Palatnik. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.10"
     src: fig-9-10-gillies.jpg
     caption: >
-      The interior of Abraham Palatnik’s *Aparelho cinecromático (Chromo-kinetic set)*, 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
+      The interior of Abraham Palatnik’s *Aparelho cinecromático* (Chromo-kinetic set), 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
       © Abraham Palatnik. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.11"
     src: fig-9-11-gillies.jpg
     caption: >
-      A detail of the interior of Abraham Palatnik’s *Aparelho cinecromático (Chromo-kinetic set)*, 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
+      A detail of the interior of Abraham Palatnik’s *Aparelho cinecromático* (Chromo-kinetic set), 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
       © Abraham Palatnik. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
   - id: "9.12"
     src: fig-9-12-gillies.jpg
     caption: >
-      Gyula Kosice’s *La ciudad hidroespacial (The Hydrospatial City)*, 1946–72, acrylic, paint, metal, and light. The Museum of Fine Arts, Houston, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2009.29.1-.26.
+      Gyula Kosice’s *La ciudad hidroespacial* (The Hydrospatial City), 1946–72, acrylic, paint, metal, and light. The Museum of Fine Arts, Houston, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2009.29.1-.26.
     credit: >
       © Gyula Kosice. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
@@ -695,7 +695,7 @@ figure_list:
   - id: "10.3"
     src: fig-10-3-ferriani.jpg
     caption: >
-      Gabriele Devecchi’s *Scultura da prendere a calci* (Sculpture to kick), 1959.
+      Gabriele Devecchi’s *Scultura da prendere a calci* (Sculpture to be kicked), 1959.
     credit: >
       Photo: © Antonio Ria, 1983. Palazzo Reale, Milan.
 
@@ -716,14 +716,14 @@ figure_list:
   - id: "10.6"
     src: fig-10-6-ferriani.jpg
     caption: >
-      Gianni Colombo’s *Spazio elastico: rettangolo (*Elastic space: rectangle), 1974. Private collection.
+      Gianni Colombo’s <em>Spazio elastico: rettangolo</em> (Elastic space: rectangle), 1974. Private collection.
     credit: >
       Archivio Gianni Colombo, Milan.
 
   - id: "10.7"
     src: fig-10-7-ferriani.jpg
     caption: >
-      Vincenzo Agnetti and Gianni Colombo’s *Vobulazione e bieloquenza neg (Wobulation and Bieloquence Neg)*, 1970.
+      Vincenzo Agnetti and Gianni Colombo’s *Vobulazione e bieloquenza neg (Wobbulation and Bieloquence Neg)*, 1970.
     credit: >
       Archivio Gianni Colombo, Milan.
 
@@ -779,7 +779,7 @@ figure_list:
   - id: "11.6a"
     src: fig-11-6a-meijer.jpg
     caption: >
-      Overview of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Stedelijk Museum Amsterdam Collection.
+      Jean Tinguely’s *Méta-Matic No. 10*, 1959. Stedelijk Museum Amsterdam Collection.
     credit: >
       © Jean Tinguely, c/o Pictoright Amsterdam 2016. Photo: Rik Klein Gotink.
 
