Small Fixes to Essay 12

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -329,7 +329,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Heydenreich 2012
-    full: "Heydenreich, Gunnar. 2012. *Zero am Bau. Eine Studie zur Erhaltung baugebundener Kunst*. In *In die Jahre gekommen?! Zum Umgang mit Kunst am Bau*, 8–13. Berlin: Bundesministerium für Verkehr, Bau und Stadtentwicklung."
+    full: "Heydenreich, Gunnar. 2012. “Zero am Bau. Eine Studie zur Erhaltung baugebundener Kunst.” In *In die Jahre gekommen?! Zum Umgang mit Kunst am Bau*, 8–13. Berlin: Bundesministerium für Verkehr, Bau und Stadtentwicklung."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Köhler 2013
@@ -349,7 +349,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Uecker 1961
-    full: "Uecker, Günther. 1961. *Der Zustand Weiss*. In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager. Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel."
+    full: "Uecker, Günther. 1961. “Der Zustand Weiss.” In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager. Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Amigo, Dolinko, and Rossi 2010
