--- a/data/figures.yml
+++ b/data/figures.yml
@@ -821,14 +821,14 @@ figure_list:
   - id: "12.5a"
     src: fig-12-5a-heydenreich.jpg
     caption: >
-      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, in the Documenta 3, Kassel, 1964.
+      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, at documenta 3, Kassel, 1964.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: © documenta Archiv/Friedemann Singer.
 
   - id: "12.5b"
     src: fig-12-5b-heydenreich.jpg
     caption: >
-      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, re-created at Museum Kunstpalast, Düsseldorf, 1993–2001.
+      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, re-created at Kunstmuseum (today Museum Kunstpalast, Düsseldorf), 1993–2001.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: Museum Kunstpalast, Düsseldorf.
 
@@ -856,7 +856,7 @@ figure_list:
   - id: "12.5f"
     src: fig-12-5f-heydenreich.jpg
     caption: >
-      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, at the Stedelijk Museum, Amsterdam, July 4–November 8, 2015.
+      Otto Piene, Günther Uecker, and Heinz Mack’s *Lichtraum* (*Hommage à Fontana*), 1964, at the Stedelijk Museum Amsterdam, July 4–November 8, 2015.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / VG Bild-Kunst, Bonn. Photo: Tijs Visser.
 
