Small Fixes to Essays 13-15

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -505,7 +505,7 @@ entries:
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: Van de Vall 2005
-    full: "Van de Vall, Renee. 2005. “Painful Decisions: Philosophical Considerations on a Decision-Making Model.” In Hummelen and Sillé 2005:196–200."
+    full: "Van de Vall, Renee. 2005. “Painful Decisions: Philosophical Considerations on a Decision-Making Model.” In Hummelen and Sillé 2005: 196–200."
     reference_for: "theoretical-issues/14-dhaenens"
 
   - short: van Saaze 2009
