--- a/data/figures.yml
+++ b/data/figures.yml
@@ -870,7 +870,7 @@ figure_list:
   - id: "13.1"
     src: fig-13-1-plante.jpg
     caption: >
-      *Julio Le Parc*. Catalogue of the *XXXIII Biennale di Venezia, Italia*, 1966. Cover designer Rogelio Polesello overprinted a plot of colors on the black-and-white photograph of Le Parc’s kinetic multiple. Museo Nacional de Bellas Artes, Buenos Aires.
+      *Julio Le Parc*. Catalogue of the *XXXIII Biennale di Venezia, Italia*, 1966. Cover designer Rogelio Polesello overprinted a plot of colors on the black-and-white photograph of Le Parc’s kinetic multiple. Museo Nacional de Bellas Artes Archive, Buenos Aires.
     credit: >
       Courtesy of Osvaldo Polesello. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
 
@@ -891,7 +891,7 @@ figure_list:
   - id: "13.4"
     src: fig-13-4-plante.jpg
     caption: >
-      Cover of the catalogue for *La Inestabilidad*, the 1964 GRAV exhibition at the Museo Nacional de Bellas Artes, Buenos Aires, illustrated with a photograph of one of Julio Le Parc’s *Continuels-mobiles*. Museo Nacional de Bellas Artes, Buenos Aires.
+      Cover of the catalogue for *La Inestabilidad*, the 1964 GRAV exhibition at the Museo Nacional de Bellas Artes, Buenos Aires, illustrated with a photograph of one of Julio Le Parc’s *Continuels-mobiles*. Museo Nacional de Bellas Artes Archive, Buenos Aires.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
 
@@ -919,7 +919,7 @@ figure_list:
   - id: "13.8"
     src: fig-13-8-plante.jpg
     caption: >
-      Julio Le Parc’s *Multiple no. 10*. Light in movement, visualized in volume of water, edition 1966, 32 × 32 × 42 cm. These multi-schemas show how serial production of kinetic objects was projected and published. Each prototype corresponded to a series of works, but it was given a number rather than a title, and its visual qualities unfolded in a series of four photos. Although all multiples from the same series must be identical, each of them was transformable. Archivos di Tella, Universidad Torcuato di Tella.
+      Julio Le Parc’s *Multiple no. 10*. Light in movement, visualized in volume of water, edition 1966, 32 × 32 × 42 cm. These multi-schemas show how serial production of kinetic objects was projected and published. Each prototype corresponded to a series of works but was given a number rather than a title, and its visual qualities unfolded in a series of four photos. Although all multiples from the same series had to be identical, each of them was transformable. Archivos di Tella, Universidad Torcuato di Tella.
     credit: >
       Courtesy of Archivos Di Tella, Universidad Torcuato Di Tella. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
 
@@ -933,21 +933,21 @@ figure_list:
   - id: "14.2a"
     src: fig-14-2a-d’haenens.jpg
     caption: >
-      Spatiodynamism *Spationynamique 16* with Maurice Béjart, 1953.
+      Spatiodynamism as seen in Schöffer’s *Spationynamique 16* with Maurice Béjart, 1953.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.2b"
     src: fig-14-2b-d’haenens.jpg
     caption: >
-      Luminodynamism *Lux 2*, 1957.
+      Luminodynamism as seen in Schöffer’s *Lux 2*, 1957.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.2c"
     src: fig-14-2c-d’haenens.jpg
     caption: >
-      Chronodynamism *Chronos 10*, 1969.
+      Chronodynamism as seen in Schöffer’s *Chronos 10*, 1969.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
