3-Gilberg Changes BH

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -235,7 +235,7 @@ figure_list:
   - id: "3.9"
     src: fig-3-9-gilberg.jpg
     caption: >
-      A car in *Metropolis II* leaving the track, captured by the GoPro.
+      A car in *Metropolis II* falling off the track, captured by the GoPro.
     credit: >
       © Chris Burden Estate, Courtesy of the Nicolas Berggruen Charitable Foundation. Photo: Mark Gilberg and Alison Walker.
 
