--- a/data/figures.yml
+++ b/data/figures.yml
@@ -425,7 +425,7 @@ figure_list:
     media_type: youtube
     fallback: fig-7-6-video-stephenson.jpg
     caption: >
-      Sound produced by the operation of Takis’s *Musical-M.013*, 2000. The Menil Collection, Houston, gift of the artist.
+      Detail of the operation of Takis’s *Musical-M.013* producing sound, 2000. The Menil Collection, Houston, gift of the artist.
     credit: >
       © Takis Foundation. Video capture: The Menil Collection, Houston, Adam Baker.
 
