--- a/data/figures.yml
+++ b/data/figures.yml
@@ -627,28 +627,28 @@ figure_list:
     credit: >
       © Horacio García Rossi. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.6"
+  - id: "9.6a"
     src: fig-9-6-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights. Interior front panel before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
     credit: >
       © Horatio García Rossi. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.7"
+  - id: "9.6b"
     src: fig-9-7-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; before treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      Interior back panel from side before treatment.
     credit: >
       © Horatio García Rossi. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.8"
+  - id: "9.6c"
     src: fig-9-8-gillies.jpg
     caption: >
-      The interior of Horacio García Rossi’s *Structure à lumière instable no. 29* (Unstable Light Structure No. 29), 1966, painted wood, Lucite rods, electric motor, and lights; after treatment. The Museum of Fine Arts, Houston, gift of Benbow and Jean Bullock, 2004.1618.
+      Interior front panel after treatment.
     credit: >
       © Horatio García Rossi. Photo: Jane Gillies © The Museum of Fine Arts, Houston.
 
-  - id: "9.9"
+  - id: "9.7"
     src: wRws0HvLPB8
     media_type: youtube
     fallback: fig-9-9-video-gillies.jpg
@@ -657,21 +657,21 @@ figure_list:
     credit: >
       © Abraham Palatnik. Video: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.10"
+  - id: "9.8"
     src: fig-9-10-gillies.jpg
     caption: >
       The interior of Abraham Palatnik’s *Aparelho cinecromático* (Chromo-kinetic set), 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
       © Abraham Palatnik. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.11"
+  - id: "9.9"
     src: fig-9-11-gillies.jpg
     caption: >
       A detail of the interior of Abraham Palatnik’s *Aparelho cinecromático* (Chromo-kinetic set), 1962, wooden box with plastic cover, electric motor, and colored light bulbs linked to a programmed electric circuit and cardboard paddles; after treatment. The Museum of Fine Arts, Houston, the Adolpho Leirner Collection of Brazilian Constructive Art, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2007.21.
     credit: >
       © Abraham Palatnik. Photo: Matt Golden © The Museum of Fine Arts, Houston.
 
-  - id: "9.12"
+  - id: "9.10"
     src: fig-9-12-gillies.jpg
     caption: >
       Gyula Kosice’s *La ciudad hidroespacial* (The Hydrospatial City), 1946–72, acrylic, paint, metal, and light. The Museum of Fine Arts, Houston, museum purchase funded by the Caroline Wiess Law Accessions Endowment Fund, 2009.29.1-.26.
