11-6b caption change BH

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -786,7 +786,7 @@ figure_list:
   - id: "11.6b"
     src: fig-11-6b-meijer.jpg
     caption: >
-      Detail of the centerpiece of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Stedelijk Museum Amsterdam Collection.
+      Detail of the central element of Jean Tinguely’s *Méta-Matic No. 10*, 1959. Stedelijk Museum Amsterdam Collection.
     credit: >
       © Jean Tinguely, c/o Pictoright Amsterdam 2016. Photo: Rik Klein Gotink.
 
