--- a/data/figures.yml
+++ b/data/figures.yml
@@ -977,7 +977,7 @@ figure_list:
     media_type: youtube
     fallback: fig-15-2-video-brobbel.jpg
     caption: >
-      Len Lye’s *A Flip and Two Twisters (Trilogy)*, 1977.
+      Len Lye’s *A Flip and Two Twisters (Trilogy)*, 1977 footage.
     credit: >
       Len Lye Foundation Collection, Govett-Brewster Art Gallery.
 
