Bibliography Changes BH

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -33,7 +33,7 @@ entries:
     reference_for: "keynotes/2-caianiello"
 
   - short: Eco 1962
-    full: "Eco, Umberto. 1962. In *Arte programmata: Arte cinetica, opere moltiplicate, opera aperta*. Milan: Olivetti. Exh. cat."
+    full: "Eco, Umberto. 1962. Untitled essay in *Arte programmata: Arte cinetica, opere moltiplicate, opera aperta*. n.p. Milan: Olivetti. Exh. cat."
     reference_for: "keynotes/2-caianiello"
 
   - short: Eco 1989
@@ -141,7 +141,7 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Enright 2007
-    full: "Enright, Robert. 2007. “The Certainty of Machines: An Interview with Max Dean.” *Border Crossings* 101 (March)."
+    full: "Enright, Robert. 2007. “The Certainty of Machines: An Interview with Max Dean.” *Border Crossings* 101 , 26, no. 1 (March): 24–37."
     reference_for: "case-studies/6-phillips"
 
   - short: Langill 2006
@@ -149,7 +149,7 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Laurenson 2006
-    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). [www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
+    full: "Laurenson, Pip. 2006. “Authenticity, Change and Loss in the Conservation of Time-Based Media Installations.” *Tate Papers* 6 (Autumn). Accessed April 1, 2016.[www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations](http://www.tate.org.uk/research/publications/tate-papers/06/authenticity-change-and-loss-conservation-of-time-based-media-installations)."
     reference_for: "case-studies/6-phillips"
 
   - short: Smithsonian Institution 2010
@@ -313,7 +313,7 @@ entries:
     reference_for: "collections/11-meijer"
 
   - short: Erhan 2015
-    full: "Erhan, Mine. 2015. *Die Teilrekonstruktion der “Weißen Lichtmühle” aus dem Düsseldorfer ZERO-Lichtraum. Das Spannungsfeld zwischen Objektgeschichte, Originalität und Stabilität*, 6–16. VDR-Beiträge 1."
+    full: "Erhan, Mine. 2015. *Die Teilrekonstruktion der “Weißen Lichtmühle” aus dem Düsseldorfer ZERO-Lichtraum. Das Spannungsfeld zwischen Objektgeschichte, Originalität und Stabilität*, 6–16. VDR-Beiträge 1. Verband der Restauratoren e. V., Bonn."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Giebeler 2011
@@ -341,7 +341,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Scheffler-Rother 2004
-    full: "Scheffler-Rother, Ulrike. 2004. *Die Rolandschule in Düsseldorf*. Rheinische Kunststätten, Booklet 464."
+    full: "Scheffler-Rother, Ulrike. 2004. *Die Rolandschule in Düsseldorf*. Rheinische Kunststätten, Booklet 464, Köln."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Schmidt 2008
@@ -349,7 +349,7 @@ entries:
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Uecker 1961
-    full: "Uecker, Günther. 1961. “Der Zustand Weiss.” In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager. Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel."
+    full: "Uecker, Günther. 1961. “Der Zustand Weiss.” In *ZERO aus Deutschland, 1957–1966: Und heute*, edited by R. Wiehager. Ausstellungskatalog Galerie der Stadt Esslingen Villa Merkel, Esslingen 1999–2000: 251."
     reference_for: "theoretical-issues/12-heydenreich_giebeler"
 
   - short: Amigo, Dolinko, and Rossi 2010
@@ -417,7 +417,7 @@ entries:
     reference_for: "theoretical-issues/13-plante"
 
   - short: Rousseau 2005
-    full: "Rousseau, Pascal. 2005. “‘Folklore planétaire.’ Le sujet cybernétique dans l’art optique des années 1960.” In *L’oeil moteur: Art optique et cinétique, 1950–1975*, edited by Emmanuel Guignon and Arnauld Pierre. Strasbourg: Musée d’Art Contemporain de Strasbourg."
+    full: "Rousseau, Pascal. 2005. “‘Folklore planétaire.’ Le sujet cybernétique dans l’art optique des années 1960.” In *L’oeil moteur: Art optique et cinétique, 1950–1975*, edited by Emmanuel Guignon and Arnauld Pierre. Strasbourg: Musée d’Art Contemporain de Strasbourg, 142–150."
     reference_for: "theoretical-issues/13-plante"
 
   - short: Beunen 2005
@@ -541,7 +541,7 @@ entries:
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Leider 1966
-    full: "Leider, Philip. 1966. *Artforum*."
+    full: "Leider, Philip. 1966. “Kinetic Sculpture at Berkeley.” *Artforum*, May 1966, 40–44."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Lye 1965
@@ -553,7 +553,7 @@ entries:
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Lye 1984
-    full: "Lye, Len. 1984. “Art That Moves,” “Considering a Temple,” “Tangible Motion Sculpture,” and “Why I Scratch, or How I Got to Particles.” In *Figures of Motion: Len Lye, Selected Writings*, edited by Wystan Curnow and Roger Horrocks. Auckland: Auckland University Press."
+    full: "Lye, Len. 1984. “Art That Moves,” 78–87; “Considering a Temple,” 87–90; “Tangible Motion Sculpture,” 75–78; and “Why I Scratch, or How I Got to Particles,” 94–96. In *Figures of Motion: Len Lye, Selected Writings*, edited by Wystan Curnow and Roger Horrocks. Auckland: Auckland University Press."
     reference_for: "preface,theoretical-issues/15-brobbel_rees"
 
   - short: Lye 1975
@@ -561,11 +561,11 @@ entries:
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Matthews 1980
-    full: "Matthews, John. 1980. “The New Zealand Collection.” *Art New Zealand*. Auckland."
+    full: "Matthews, John. 1980. “The New Zealand Collection.” *Art New Zealand*, 32–33. Auckland."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Newman and Bloom 2011
-    full: "Newman, George, and Paul Bloom. 2011. “Art and Authenticity: The Importance of Originals in Judgments of Value.” *Journal of Experimental Psychology* 141, no. 3."
+    full: "Newman, George, and Paul Bloom. 2011. “Art and Authenticity: The Importance of Originals in Judgments of Value.” *Journal of Experimental Psychology* 141, no. 3, 1–12."
     reference_for: "theoretical-issues/15-brobbel_rees"
 
   - short: Webb 1996
