5-12-15-Biblio More Changes 10-1-17

--- a/data/bibliography.yml
+++ b/data/bibliography.yml
@@ -137,7 +137,7 @@ entries:
     reference_for: "case-studies/6-phillips"
 
   - short: Engel and Wharton 2014
-    full: "Engel, Deena, and Glenn Wharton. 2014. “Reading between the Lines: Source Code Documentation as a Conservation Strategy for Software-Based Art.” *Studies in Conservation* 58 (1). London: International Institute for Conservation of Historic and Artistic Works."
+    full: "Engel, Deena, and Glenn Wharton. 2014. “Reading between the Lines: Source Code Documentation as a Conservation Strategy for Software-Based Art.” *Studies in Conservation* 59 (6), 403–15. London: International Institute for Conservation of Historic and Artistic Works."
     reference_for: "case-studies/6-phillips"
 
   - short: Enright 2007
